kubernetes/apps/home-automation/keyconfig/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: keyconfig
  labels:
    app: keyconfig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keyconfig
  template:
    metadata:
      labels:
        app: keyconfig
    spec:
      containers:
      - name: keyconfig
        image: ghcr.io/bokker/keyconfig:1.0.57 # {"$imagepolicy": "flux-system:keyconfig"}
        imagePullPolicy: Always
        ports:
        - containerPort: 10060
      imagePullSecrets:
      - name: regcred
