kubernetes/apps/home-automation/keyconfig/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keyconfig
  namespace: home-automation
spec:
  selector:
    app: keyconfig
  type: ClusterIP
  ports:
  - name: web
    protocol: TCP
    port: 10060
    targetPort: 10060
